<resources>
    <string name="app_name">NotesApp</string>
    <string name="discover_the_platform">Discover the platform</string>
    <string name="log_in">Log-in</string>
    <string name="return_to_sign_up">Return to Sign-up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title">Spiice</string>
    <string name="you_have_an_account_log_in">You have an account? Log-in</string>
    <string name="sign_up">Sign-up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_note">Add Note</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="required">Required</string>
    <string name="minimum_three_characters">Minimum length is 3 characters</string>
    <string name="email_format">Email format</string>
    <string name="back">Back</string>
    <string name="password_validator">Minimum length is 6 characters, must contain upper and lower case letters, number and sign</string>
</resources>